# conwaysGameOfLife

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
conways_game_of_life/: controller.py  main.py
src/conways_game_of_life/: __init__.py  controller.py  logger.py  model.py  view.py
src/conways_game_of_life/cli/: main.py
src/conways_game_of_life/controller/: __init__.py  controller.py  protocols.py
src/conways_game_of_life/model/: __init__.py  model.py
src/conways_game_of_life/view/: __init__.py  view.py
