[project]
name = "conways-game-of-life"
version = "0.1.0"
description = "Conway's Game of Life"
readme = "README.md"
authors = [
    { name = "Juan Carlos Aguirre Arango", email = "carlos.aguirre@rappi.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "docopt>=0.6.2",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
conways-game-of-life = "conways_game_of_life.cli.main:main"
