[project]
name = "conways-game-of-life"
version = "0.1.0"
description = "Conway's Game of Life"
readme = "README.md"
authors = [
    { name = "Juan Carlos Aguirre Arango", email = "jucaguirrear@unal.edu.co" } 
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "typer-slim>=0.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
conways-game-of-life = "conways_game_of_life.cli.main:cli"
